scripts/nullness/wpi/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8.txt
../original/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/ResultPrinter.java:41: error: (dereference.of.nullable) $$ 1 $$ test.getResult() $$ ( 942, 958 ) $$ dereference of possibly-null reference test.getResult()
			buffer.add(test.getResult().print());
			                         ^
1 error
